# fcitx5-rime

./: .gitignore  .gitmodules  Makefile  README.md  apply-template.el  template.json
fcitx5-rime/: CMakeLists.txt  Messages.sh  PKGBUILD  org.fcitx.Fcitx5.Addon.{{{name}}}.metainfo.xml.in
fcitx5-rime/cmake/: Find{{{name}}}Data.cmake
fcitx5-rime/data/: CMakeLists.txt
fcitx5-rime/po/: ca.po  da.po  de.po  fcitx5-{{{lowername}}}.pot  he.po  ja.po  ko.po  ru.po  tr.po  vi.po  zh_CN.po  zh_TW.po
fcitx5-rime/src/: CMakeLists.txt  {{{lowername}}}candidate.cpp  {{{lowername}}}candidate.h  {{{lowername}}}engine.cpp  {{{lowername}}}engine.h  {{{lowername}}}service.cpp  {{{lowername}}}service.h  {{{lowername}}}state.cpp  {{{lowername}}}state.h
template/: CMakeLists.txt  PKGBUILD
template/data/: CMakeLists.txt
template/po/: CMakeLists.txt  ca.po  da.po  de.po  he.po  ru.po
template/src/: CMakeLists.txt  rimeengine.cpp  rimeengine.h  rimeservice.cpp  {{{lowername}}}-addon.conf.in.in  {{{lowername}}}.conf.in
